[tool.poetry]
authors = ["Manuel Lera Ramirez <manulera14@gmail.com>"]
description = "A simple web app to visualize relationships in an ontology"
name = "ontology_viewer"
version = "0.1.0"

[tool.poetry.dependencies]
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
pronto = "^2.4.5"
python = "^3.9"
requests = "^2.27.1"


[tool.poetry.dev-dependencies]
ipykernel = "^6.15.0"
[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
